--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
 	<h1>Test</h1>
+	<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
+	<p>Sign up <i>now</i> to get started</p>
+
+	<p>You <i>know</i> you want to.</p>
 </body>
 </html>
