added js file for some query selectors

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 	<title>Sign Up Form</title>
 </head>
 <body>
-	<h1>Test</h1>
+	<a class="background"></a>
 	<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
 	<p>Sign up <i>now</i> to get started</p>
 
 	<p>You <i>know</i> you want to.</p>
+
+	<button>Create Account</button>
+
+	<p><li>Already have an account? Log in</li></p>
 </body>
 </html>
