sorting out div classes and forms

--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="styles.css" rel="stylesheet" >
+	<script src="sign-up.js"></script>
 	<title>Sign Up Form</title>
 </head>
 <body>
-	<a class="background"></a>
+	<div class="container">
+		<div class="form-wrapper">
+			<div class="banner">
 	<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
 	<p>Sign up <i>now</i> to get started</p>
 
 	<p>You <i>know</i> you want to.</p>
 
-	<button>Create Account</button>
+	<h1>Lets do This!</h1>
+	<form class="signup-form">
+		<h3>Create account</h3>
+		<div class="social media"></div>
+
+	</form>
+
+	<div class="darkGreen">
+	<button type="button">Create Account</button>
+	</div>
 
 	<p><li>Already have an account? Log in</li></p>
+</div>
+</div>
+</div>
 </body>
 </html>
