created base html

--- a/index.html
+++ b/index.html
@@ -9,28 +9,69 @@
 	<title>Sign Up Form</title>
 </head>
 <body>
-	<div class="container">
+	<div class="background">
 		<div class="form-wrapper">
-			<div class="banner">
-	<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
-	<p>Sign up <i>now</i> to get started</p>
-
-	<p>You <i>know</i> you want to.</p>
-
-	<h1>Lets do This!</h1>
-	<form class="signup-form">
-		<h3>Create account</h3>
-		<div class="social media"></div>
-
-	</form>
-
-	<div class="darkGreen">
-	<button type="button">Create Account</button>
+				<span class="logo"></span>
+				Title here
+			</div>
+			<div class="author">
+				<p>
+					by Macauley
+				</p>
+		</div>
 	</div>
 
-	<p><li>Already have an account? Log in</li></p>
+	<div class="sign-up">
+		<div class="header">
+			<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
+			<p>Sign up <i>now</i> to get started</p>
+
+			<p>You <i>know</i> you want to.</p>
+
+		</div>
+
+	<div class="form-section">
+	<h1>Lets do This!</h1>
+
+	<div class="sections">
+		<div class="section">
+			<label for="fname">First Name
+				<span>*</span>
+				<input id="lname" type="text" required="">
+			</label>
+			<label for="fname">Last Name
+				<span>*</span>
+				<input id="lname" type="text" required="">
+			</label>
+			<label for="email">Email
+				<span>*</span>
+				<input id="email" type="text" required="">
+			</label>
+			<label for="phone">Phone
+				<span>*</span>
+				<input id="phone" type="text" required="">
+			</label>
+			<label for="password">Password
+				<span>*</span>
+				<input id="password" type="text" required="">
+			</label>
+			<label for="cpassword">Confirm Password
+				<span>*</span>
+			<input id="cpassword" type="text" required="">
+			</label>
+		</div>
+	</div>
+
+	<div class="button">
+		<button id="btnSubmit" type="submit" style="font-family: Arial, Helvetica, sans-serif;">Sign me up!</button>
+	</div>
+	<div class="account">
+		<p>Already signed up?
+			<a href="">Click Here</a>
+			for more information
+		</p>
+	</div>
 </div>
-</div>
-</div>
+
 </body>
 </html>
