--- a/index.html
+++ b/index.html
@@ -5,66 +5,67 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="styles.css" rel="stylesheet" >
-	<script src="sign-up.js"></script>
+	<script src="sign-up.js" defer></script>
 	<title>Sign Up Form</title>
 </head>
 <body>
 	<div class="background">
-		<div class="form-wrapper">
-				<span class="logo"></span>
-				Title here
-			</div>
-			<div class="author">
-				<p>
-					by Macauley
-				</p>
-		</div>
-	</div>
+        <img src="images/wheat.jpg" alt="picture" class="img2">
+        <div class="logo">
+            <img src="images/logo.png" id="img1">
+        </div>
+        <div class="author">
+            <p>Image by <a href="https://unsplash.com/photos/KMDGu1blGi8" target="_blank">Maksym Tymchyk</a></p>
+        </div>
+
+    </div>
 
 	<div class="sign-up">
-		<div class="header">
+        <div class="header">
+            <div class="header-content">
 			<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
 			<p>Sign up <i>now</i> to get started</p>
 
 			<p>You <i>know</i> you want to.</p>
-
+			</div>
 		</div>
 
 	<div class="form-section">
-	<h1>Lets do This!</h1>
+		<form action="#" id="form">
+			<div class="colored">
 
+	<h2>Let's do this!</h2>
 	<div class="sections">
+
 		<div class="section">
-			<label for="fname">First Name
-				<span>*</span>
-				<input id="lname" type="text" required="">
-			</label>
-			<label for="email">Email
-				<span>*</span>
-				<input id="email" type="text" required="">
-			</label>
-			<label for="password">Password
-				<span>*</span>
-				<input required="" type="password" id="password" onchange="onChange()" minlength="5" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Password must contain at least one uppercase letter, one lowercase letter, number and be minimum of 5 characters long">
-			</label>
-			<div class="section">
-			<label for="lname">Last Name
-				<input id="lname" type="text" required="">
-			</label>
-			<label for="phone">Phone
-				<input id="phone" type="text" required="">
-			</label>
-			<label for="cpassword">Confirm Password
-				<span>*</span>
-			<input id="cpassword" type="text" required="">
-			</label>
-		</div>
+			<label for="fname">First name <span style="color: #c41212;">*</span></label>
+			<input type="text" id="fname" required>
+
+			<label for="email">Email <span style="color: #c41212;">*</span></label>
+			<input type="email" id="email" required>
+
+			<label for="password">Password <span style="color: #c41212;">*</span></label>
+			<input required type="password" id="password" onChange="onChange()" required minlength="5" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Password must contain at least one uppercase letter, one lowercase letter, number and be minimum of 5 characters long">
+			</div>
+
+		<div class="section">
+			<label for="lname">Last name</label>
+			<input type="text" id="lname">
+
+			<label for="phone">Phone</label>
+			<input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" title="example: 123-45-678" placeholder="123-45-678">
+
+			<label for="password-again">Confirm password <span style="color: #c41212;">*</span></label>
+			<input type="password" id="password-again" required onChange="onChange()">
 		</div>
 	</div>
+</div>
 
 	<div class="button">
 		<button id="btnSubmit" type="submit" style="font-family: Arial, Helvetica, sans-serif;">Sign me up!</button>
 	</div>
+</form>
+
 	<div class="account">
 		<p>Already signed up?
 			<a href="">Click Here</a>
