--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="background">
-        <img src="images/wheat.jpg" alt="picture" class="img2">
+        <img src="images/wheat.jpg" alt="NO PICTURE" class="img2">
         <div class="logo">
             <img src="images/logo.png" id="img1">
         </div>
@@ -26,12 +26,14 @@
 			<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
 			<p>Sign up <i>now</i> to get started</p>
 
-			<p>You <i>know</i> you want to.</p>
+			<h1 class="specialheader">You <i>know</i> you want to.</h1>
 			</div>
-		</div>
 
-	<div class="form-section">
+		</div>
+	<div class="form">
+
 		<form action="#" id="form">
+
 			<div class="colored">
 
 	<h2>Let's do this!</h2>
@@ -66,14 +68,13 @@
 	</div>
 </form>
 
+</div>
 	<div class="account">
 		<p>Already signed up?
-			<a href="">Click Here</a>
-			for more information
-		</p>
-	</div>
+			<a href="">Click Here</a>for more information</p>
 	</div>
 </div>
+
 
 </body>
 </html>
