--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="background">
-        <img src="images/wheat.jpg" alt="NO PICTURE" class="img2">
+        <img src="images/wheat.jpg" alt="picture" class="img2">
         <div class="logo">
             <img src="images/logo.png" id="img1">
         </div>
