--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<div class="sign-up">
         <div class="header">
             <div class="header-content">
-			<p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams</p>
-			<p>Sign up <i>now</i> to get started</p>
+				<h1>This is not a real online service! Give a helping hand to Ukraine by signing up for voluntary work.<br>Sign up now to get started.</h1>
+                <h1 id="specialheader">Volunteer now!</h1>
 
 			<h1 class="specialheader">You <i>know</i> you want to.</h1>
 			</div>
@@ -71,7 +71,7 @@
 </div>
 	<div class="account">
 		<p>Already signed up?
-			<a href="">Click Here</a>for more information</p>
+			<a href="">Click Here</a> for more information</p>
 	</div>
 </div>
 
